[package]
name = "todo-filter-action"
description = "Filter through Todos in a project, and output any pending todos to a pull request comment, based on properties of the pull request"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
serde = {version= "1.0", features = ["derive"]}
serde_json = "1.0.113"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
